--- a/project/pom.xml
+++ b/project/pom.xml
@@ -63,6 +63,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.3.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
